--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "panta82-emoji-mart",
-  "version": "3.0.1003",
+  "version": "3.0.1004",
   "description": "Customizable Slack-like emoji picker for React",
   "main": "dist/index.js",
   "module": "dist-es/index.js",
@@ -25,7 +25,7 @@
     "prop-types": "^15.6.0"
   },
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0-0 || ^16.0.0"
+    "react": "^0.14.0 || ^15.0.0-0 || ^16.0.0 || ^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
@@ -49,9 +49,9 @@
     "jest": "^24.9.0",
     "mkdirp": "0.5.1",
     "prettier": "^1.16.4",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-test-renderer": "^16.8.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-test-renderer": "^18.2.0",
     "rimraf": "2.5.2",
     "size-limit": "^0.11.4",
     "webpack": "^3.6.0"
